assets/css/partials/_reboot.scss
html {
  scroll-behavior: smooth;
}

html,
body {
  width: 100%;
}

body {
  font-family: var(--base-font-family) !important;
  background-color: var(--base-bg);
  color: var(--base-color);
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color: transparent;
  -webkit-font-smoothing: antialiased;
  padding: 0;
  margin: 0;
  min-height: 100vh;
  background-image: url('/assets/img/body-bg.png'),url('/assets/img/footer-bg.png');
  background-repeat: no-repeat,no-repeat;
  background-position:
  top left,
  bottom right;
  // overflow-x: hidden;
  z-index: -1;
}

* {
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  line-height: 120%;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

[tabindex="-1"]:focus:not(:focus-visible) {
  outline: 0 !important;
}

hr {
  margin: 1rem 0;
  color: inherit; // 1
  background-color: var(--gray-4);
  border: 0;
}

hr:not([size]) {
  height: 1px; // 2
}

abbr[title],
abbr[data-bs-original-title] {
  // 1
  text-decoration: underline; // 2
  text-decoration: underline dotted; // 2
  cursor: help; // 3
  text-decoration-skip-ink: none; // 4
}

address {
  margin-bottom: 1rem;
  font-style: normal;
  line-height: inherit;
}

b,
strong {
  font-weight: bolder;
}

a {
  color: inherit;
  text-decoration: none;
  cursor: pointer;

  &:hover {
    color: var(--primary)!important;
  }
}

a:not([href]):not([class]) {

  &,
  &:hover {
    color: inherit;
    text-decoration: none;
  }
}

pre,
code,
kbd,
samp {
  direction: ltr #{"/* rtl:ignore */"};
}

pre {
  display: block;
  overflow: auto; // 3

  code {
    color: inherit;
    word-break: normal;
  }
}

code {
  color: inherit;
  word-wrap: break-word;

  a>& {
    color: inherit;
  }
}

img,
svg {
  vertical-align: middle;
}

table {
  caption-side: bottom;
  border-collapse: collapse;
}

th {
  text-align: inherit;
  text-align: -webkit-match-parent;
}

thead,
tbody,
tfoot,
tr,
td,
th {
  border-color: inherit;
  border-style: solid;
  border-width: 0;
}

label {
  display: inline-block; // 1
}

input,
button,
select,
optgroup,
textarea {
  margin: 0;
  font-family: inherit;
  line-height: inherit;
}

button,
select {
  text-transform: none;
}

[role="button"] {
  cursor: pointer;
}

select {
  word-wrap: normal;
}

[list]::-webkit-calendar-picker-indicator {
  display: none;
}

button,
[type="button"],
// 1
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;

  &:not(:disabled) {
    cursor: pointer;
  }
}

::-moz-focus-inner {
  padding: 0;
  border-style: none;
}

textarea {
  resize: vertical;
}

fieldset {
  min-width: 0; // 1
  padding: 0; // 2
  margin: 0; // 2
  border: 0; // 2
}

::-webkit-datetime-edit-fields-wrapper,
::-webkit-datetime-edit-text,
::-webkit-datetime-edit-minute,
::-webkit-datetime-edit-hour-field,
::-webkit-datetime-edit-day-field,
::-webkit-datetime-edit-month-field,
::-webkit-datetime-edit-year-field {
  padding: 0;
}

::-webkit-inner-spin-button {
  height: auto;
}

::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-color-swatch-wrapper {
  padding: 0;
}

::file-selector-button {
  font: inherit;
}

::-webkit-file-upload-button {
  font: inherit; // 1
  -webkit-appearance: button; // 2
}

output {
  display: inline-block;
}

iframe {
  border: 0;
}

summary {
  display: list-item; // 1
  cursor: pointer;
}

progress {
  vertical-align: baseline;
}

[hidden] {
  display: none !important;
}

ul,
li {
  display: -webkit-flex;
  display: flex;
}

ul {
  flex-direction: column;
}

li {
  align-items: center;
  position: relative;
}

small {
  font-size: inherit;
}

